fix[tracking-url]: truncate name in destination address

--- a/packages/tracking-url/src/app/destination-popup/destination-popup.component.scss
+++ b/packages/tracking-url/src/app/destination-popup/destination-popup.component.scss
@@ -1,6 +1,11 @@
 @import "../../styles/variables";
 .card {
-  max-width: 150px;
+  max-width: 170px;
   background: $live-dark;
   color: white;
+  box-shadow: 0 2px 6px 0 rgba(114,114,114,0.6);
+}
+
+.truncate {
+  max-width: 170px;
 }
